apps/prod/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: apps
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
